--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.18.4
-matplotlib>=3.2.1
-cmake>=3.17.2
-dlib>=19.19.0
-joblib>=0.15.1
-opencv-python>=4.2.0.34
+numpy==1.18.4
+matplotlib==3.2.1
+cmake==3.17.2
+dlib==19.19.0
+joblib==0.15.1
+opencv-python==4.2.0.34
